max 1 card per row

--- a/src/pug/_macros.j2
+++ b/src/pug/_macros.j2
@@ -1,6 +1,6 @@
 {% macro paper (id, authors, title, year, type, publication, volume, number, series, pages, note, DOI, arxiv, abstract, bibtex, zbmath, pdf) %}
-.col
-    .card.shadow.rounded.h-100
+.col.col-lg-9.mx-auto
+    .card.shadow.rounded
         .card-body
             | {% for name in authors %}{% if loop.index > 1 %}{% if loop.last %} and {% else %}, {% endif %}{% endif %}{{ name.given }} {{ name.family }}{% if loop.last %}{% endif %}{% endfor %}<br>
             | #[strong {{ title }}]<br>
@@ -48,8 +48,8 @@
 {% endmacro %}
 
 {% macro presentation (title, event, note, daymonth, year, location, file, video, url) %}
-.col
-    .card.shadow.rounded.h-100
+.col.col-lg-9.mx-auto
+    .card.shadow.rounded
         .card-body
             | #[strong {{ title }}]<br>
             | #[i {{ event }}]<br>
