--- a/src/pug/preprints.pug
+++ b/src/pug/preprints.pug
@@ -53,9 +53,9 @@ html(lang='en')
                         li.nav-item
                             a.nav-link(href='index.html#research') Research
                         li.nav-item
-                            a.nav-link(href='papers.html') Papers
-                        li.nav-item
                             a.nav-link(href='#page-top') Preprints
+                        li.nav-item
+                            a.nav-link(href='papers.html') Papers
                         li.nav-item
                             a.nav-link(href='presentations.html') Presentations
                         li.nav-item
@@ -69,7 +69,7 @@ html(lang='en')
                 h2.text-center.mt-0 
                     .bi.bi-journal &nbsp; Preprints
                 hr.divider
-                .row.row-cols-1.row-cols-xl-2.gx-5.gy-4.mb-4
+                .row.row-cols-1.gx-5.gy-4.mb-4
                 
                 
                 
@@ -78,8 +78,8 @@ html(lang='en')
                 
                     
                                         
-                    .col
-                        .card.shadow.rounded.h-100
+                    .col.col-lg-9.mx-auto
+                        .card.shadow.rounded
                             .card-body
                                 | Ai Guan and Fernando Muro<br>
                                 | #[strong Operations on the de Rham cohomology of Poisson and Jacobi manifolds]<br>
@@ -118,8 +118,8 @@ html(lang='en')
                 
                     
                                         
-                    .col
-                        .card.shadow.rounded.h-100
+                    .col.col-lg-9.mx-auto
+                        .card.shadow.rounded
                             .card-body
                                 | Gustavo Jasso, Bernhard Keller and Fernando Muro<br>
                                 | #[strong The Donovan–Wemyss Conjecture via the Derived Auslander–Iyama Correspondence]<br>
@@ -159,8 +159,8 @@ html(lang='en')
                 
                     
                                         
-                    .col
-                        .card.shadow.rounded.h-100
+                    .col.col-lg-9.mx-auto
+                        .card.shadow.rounded
                             .card-body
                                 | Gustavo Jasso, Bernhard Keller and Fernando Muro<br>
                                 | #[strong The Derived Auslander-Iyama Correspondence]<br>
@@ -199,8 +199,8 @@ html(lang='en')
                 
                     
                                         
-                    .col
-                        .card.shadow.rounded.h-100
+                    .col.col-lg-9.mx-auto
+                        .card.shadow.rounded
                             .card-body
                                 | Victor Carmona, Ramon Flores and Fernando Muro<br>
                                 | #[strong A model structure for locally constant factorization algebras]<br>
