--- a/src/subfiles/publications.pug
+++ b/src/subfiles/publications.pug
@@ -12,11 +12,11 @@
 
 h3.col-lg-12.mt-3.mb-3.text-left 
     .bi.bi-journal &nbsp; Preprints
-.row.row-cols-1.row-cols-xl-2.gx-5.gy-4.mb-4
+.row.row-cols-1.gx-5.gy-4.mb-4
 
         
-    .col
-        .card.shadow.rounded.h-100
+    .col.col-lg-9.mx-auto
+        .card.shadow.rounded
             .card-body
                 | Ai Guan and Fernando Muro<br>
                 | #[strong Operations on the de Rham cohomology of Poisson and Jacobi manifolds]<br>
@@ -56,8 +56,8 @@ h3.col-lg-12.mt-3.mb-3.text-left
 
 
         
-    .col
-        .card.shadow.rounded.h-100
+    .col.col-lg-9.mx-auto
+        .card.shadow.rounded
             .card-body
                 | Gustavo Jasso, Bernhard Keller and Fernando Muro<br>
                 | #[strong The Donovan–Wemyss Conjecture via the Derived Auslander–Iyama Correspondence]<br>
@@ -145,7 +145,7 @@ h3.col-lg-12.mt-3.mb-3.text-left
 
 h3.col-lg-12.mt-3.mb-3.text-left 
     .bi.bi-journal-check &nbsp; Papers
-.row.row-cols-1.row-cols-xl-2.gx-5.gy-4.mb-4
+.row.row-cols-1.gx-5.gy-4.mb-4
 
 
 
@@ -155,8 +155,8 @@ h3.col-lg-12.mt-3.mb-3.text-left
 
     
         
-    .col
-        .card.shadow.rounded.h-100
+    .col.col-lg-9.mx-auto
+        .card.shadow.rounded
             .card-body
                 | Jeroen Maes and Fernando Muro<br>
                 | #[strong Derived homotopy algebras]<br>
@@ -198,8 +198,8 @@ h3.col-lg-12.mt-3.mb-3.text-left
 
     
         
-    .col
-        .card.shadow.rounded.h-100
+    .col.col-lg-9.mx-auto
+        .card.shadow.rounded
             .card-body
                 | Fernando Muro<br>
                 | #[strong Massey products for algebras over operads]<br>
