--- a/src/pug/preprints.j2
+++ b/src/pug/preprints.j2
@@ -69,7 +69,7 @@ html(lang='en')
                 h2.text-center.mt-0 
                     .bi.bi-journal &nbsp; Preprints
                 hr.divider
-                .row.row-cols-1.row-cols-xl-2.gx-5.gy-4.mb-4
+                .row.row-cols-1.gx-5.gy-4.mb-4
                 {% for entry in input %}
                 {% if entry.type == '' and (entry.issued['date-parts'][0][0] | int) > 2020%}
                 {% if entry.type == '' %}
