--- a/src/pug/presentations.pug
+++ b/src/pug/presentations.pug
@@ -53,9 +53,9 @@ html(lang='en')
                         li.nav-item
                             a.nav-link(href='index.html#research') Research
                         li.nav-item
-                            a.nav-link(href='papers.html') Papers
-                        li.nav-item
                             a.nav-link(href='preprints.html') Preprints
+                        li.nav-item
+                            a.nav-link(href='papers.html') Papers
                         li.nav-item
                             a.nav-link(href='#page-top') Presentations
                         li.nav-item
@@ -69,12 +69,12 @@ html(lang='en')
                 h2.text-center.mt-0 
                     .bi.bi-easel &nbsp; Presentations
                 hr.divider
-                .row.row-cols-1.row-cols-xl-2.gx-5.gy-4.mb-4
+                .row.row-cols-1.gx-5.gy-4.mb-4
                 
                 
                                         
-                    .col
-                        .card.shadow.rounded.h-100
+                    .col.col-lg-9.mx-auto
+                        .card.shadow.rounded
                             .card-body
                                 | #[strong An application of homotopy theory to singularity theory]<br>
                                 | #[i University of Haifa Topology & Geometry Seminar]<br>
@@ -87,8 +87,8 @@ html(lang='en')
                 
                 
                                         
-                    .col
-                        .card.shadow.rounded.h-100
+                    .col.col-lg-9.mx-auto
+                        .card.shadow.rounded
                             .card-body
                                 | #[strong Hypercommutative algebras and differential forms]<br>
                                 | #[i Operadic Methods in Geometry]<br>
@@ -102,8 +102,8 @@ html(lang='en')
                 
                 
                                         
-                    .col
-                        .card.shadow.rounded.h-100
+                    .col.col-lg-9.mx-auto
+                        .card.shadow.rounded
                             .card-body
                                 | #[strong The Donovan-Wemyss conjecture on compound Du Val singularities]<br>
                                 | #[i Algebraic Geometry Seminar]<br>
@@ -116,8 +116,8 @@ html(lang='en')
                 
                 
                                         
-                    .col
-                        .card.shadow.rounded.h-100
+                    .col.col-lg-9.mx-auto
+                        .card.shadow.rounded
                             .card-body
                                 | #[strong The Donovan-Wemyss conjecture on compound Du Val singularities]<br>
                                 | #[i Seminar of Algebra and Geometry]<br>
@@ -131,8 +131,8 @@ html(lang='en')
                 
                 
                                         
-                    .col
-                        .card.shadow.rounded.h-100
+                    .col.col-lg-9.mx-auto
+                        .card.shadow.rounded
                             .card-body
                                 | #[strong Massey products and higher operations]<br>
                                 | #[i Operads in Málaga]<br>
@@ -146,8 +146,8 @@ html(lang='en')
                 
                 
                                         
-                    .col
-                        .card.shadow.rounded.h-100
+                    .col.col-lg-9.mx-auto
+                        .card.shadow.rounded
                             .card-body
                                 | #[strong The triangulated Auslander-Iyama correspondence II]<br>
                                 | #[i Séminaire d'Algèbre, Paris]<br>
@@ -161,8 +161,8 @@ html(lang='en')
                 
                 
                                         
-                    .col
-                        .card.shadow.rounded.h-100
+                    .col.col-lg-9.mx-auto
+                        .card.shadow.rounded
                             .card-body
                                 | #[strong The triangulated Auslander-Iyama correspondence I]<br>
                                 | #[i Séminaire d'Algèbre, Paris]<br>
@@ -176,8 +176,8 @@ html(lang='en')
                 
                 
                                         
-                    .col
-                        .card.shadow.rounded.h-100
+                    .col.col-lg-9.mx-auto
+                        .card.shadow.rounded
                             .card-body
                                 | #[strong Uniqueness of models for triangulated categories in representation theory]<br>
                                 | #[i Barcelona Conference on Higher Structures]<br>
@@ -192,8 +192,8 @@ html(lang='en')
                 
                 
                                         
-                    .col
-                        .card.shadow.rounded.h-100
+                    .col.col-lg-9.mx-auto
+                        .card.shadow.rounded
                             .card-body
                                 | #[strong The triangulated Auslander-Iyama correspondence II]<br>
                                 | #[i Triangulated categories in representation theory and beyond]<br>
@@ -207,8 +207,8 @@ html(lang='en')
                 
                 
                                         
-                    .col
-                        .card.shadow.rounded.h-100
+                    .col.col-lg-9.mx-auto
+                        .card.shadow.rounded
                             .card-body
                                 | #[strong Enhanced <i>n</i>-angulated categories]<br>
                                 | #[i Longitudinal Algebra and Geometry Open ONline Seminar]<br>
@@ -223,8 +223,8 @@ html(lang='en')
                 
                 
                                         
-                    .col
-                        .card.shadow.rounded.h-100
+                    .col.col-lg-9.mx-auto
+                        .card.shadow.rounded
                             .card-body
                                 | #[strong Uniqueness of enhancements for Hom-finite triangulated categories with an <i>n</i>-cluster tilting object]<br>
                                 | #[i New Directions in Group Theory and Triangulated Categories]<br>
@@ -239,8 +239,8 @@ html(lang='en')
                 
                 
                                         
-                    .col
-                        .card.shadow.rounded.h-100
+                    .col.col-lg-9.mx-auto
+                        .card.shadow.rounded
                             .card-body
                                 | #[strong Finite triangulated categories and DG-enhancements]<br>
                                 | #[i FD Seminar Online seminar on representation theory of finite-dimensional algebras]<br>
@@ -254,8 +254,8 @@ html(lang='en')
                 
                 
                                         
-                    .col
-                        .card.shadow.rounded.h-100
+                    .col.col-lg-9.mx-auto
+                        .card.shadow.rounded
                             .card-body
                                 | #[strong Finite triangulated categories]<br>
                                 | #[i University of Haifa Topology & Geometry Seminar]<br>
@@ -269,8 +269,8 @@ html(lang='en')
                 
                 
                                         
-                    .col
-                        .card.shadow.rounded.h-100
+                    .col.col-lg-9.mx-auto
+                        .card.shadow.rounded
                             .card-body
                                 | #[strong An application of A-infinity obstructions to representation theory]<br>
                                 | #[i Higher Homotopy Algebras in Topology]<br>
@@ -284,8 +284,8 @@ html(lang='en')
                 
                 
                                         
-                    .col
-                        .card.shadow.rounded.h-100
+                    .col.col-lg-9.mx-auto
+                        .card.shadow.rounded
                             .card-body
                                 | #[strong Minimal models for operadic algebras over arbitrary rings]<br>
                                 | #[i Colloque 2016 du GDR 2875, Topologie Algébrique et Applications]<br>
@@ -299,8 +299,8 @@ html(lang='en')
                 
                 
                                         
-                    .col
-                        .card.shadow.rounded.h-100
+                    .col.col-lg-9.mx-auto
+                        .card.shadow.rounded
                             .card-body
                                 | #[strong Uniqueness of A-infinity structures on graded alegbras with rich Hochschild cohomology]<br>
                                 | #[i 31st Summer Conference on Topology and its Applications]<br>
@@ -314,8 +314,8 @@ html(lang='en')
                 
                 
                                         
-                    .col
-                        .card.shadow.rounded.h-100
+                    .col.col-lg-9.mx-auto
+                        .card.shadow.rounded
                             .card-body
                                 | #[strong Triangulated derivators and their K-theory]<br>
                                 | #[i Triangulated Categories and Applications]<br>
@@ -329,8 +329,8 @@ html(lang='en')
                 
                 
                                         
-                    .col
-                        .card.shadow.rounded.h-100
+                    .col.col-lg-9.mx-auto
+                        .card.shadow.rounded
                             .card-body
                                 | #[strong Massey products and uniqueness of A-infinity algebra structures]<br>
                                 | #[i Operations in Highly Structured Homology Theories]<br>
@@ -345,8 +345,8 @@ html(lang='en')
                 
                 
                                         
-                    .col
-                        .card.shadow.rounded.h-100
+                    .col.col-lg-9.mx-auto
+                        .card.shadow.rounded
                             .card-body
                                 | #[strong Moduli spaces of DG-algebras]<br>
                                 | #[i Algebra and Geometry Meeting]<br>
@@ -359,8 +359,8 @@ html(lang='en')
                 
                 
                                         
-                    .col
-                        .card.shadow.rounded.h-100
+                    .col.col-lg-9.mx-auto
+                        .card.shadow.rounded
                             .card-body
                                 | #[strong How many units may an A-infinity algebra have?]<br>
                                 | #[i Workshop in Category Theory and Algebraic Topology]<br>
@@ -374,8 +374,8 @@ html(lang='en')
                 
                 
                                         
-                    .col
-                        .card.shadow.rounded.h-100
+                    .col.col-lg-9.mx-auto
+                        .card.shadow.rounded
                             .card-body
                                 | #[strong K-theory and t-structures]<br>
                                 | #[i Workshop on t-structures and related topics]<br>
@@ -389,8 +389,8 @@ html(lang='en')
                 
                 
                                         
-                    .col
-                        .card.shadow.rounded.h-100
+                    .col.col-lg-9.mx-auto
+                        .card.shadow.rounded
                             .card-body
                                 | #[strong Obstructions to Adams representability]<br>
                                 | #[i Triangulated categories and applications]<br>
@@ -404,8 +404,8 @@ html(lang='en')
                 
                 
                                         
-                    .col
-                        .card.shadow.rounded.h-100
+                    .col.col-lg-9.mx-auto
+                        .card.shadow.rounded
                             .card-body
                                 | #[strong Representability of cohomology theories]<br>
                                 | #[i Joint Mathematical Conference CSASC 2010]<br>
@@ -419,8 +419,8 @@ html(lang='en')
                 
                 
                                         
-                    .col
-                        .card.shadow.rounded.h-100
+                    .col.col-lg-9.mx-auto
+                        .card.shadow.rounded
                             .card-body
                                 | #[strong Triangulated categories]<br>
                                 | #[i Advanced School on Homotopy Theory and Algebraic Geometry]<br>
@@ -434,8 +434,8 @@ html(lang='en')
                 
                 
                                         
-                    .col
-                        .card.shadow.rounded.h-100
+                    .col.col-lg-9.mx-auto
+                        .card.shadow.rounded
                             .card-body
                                 | #[strong On determinants (as functors)]<br>
                                 | #[i V Seminar on Categories and Applications]<br>
@@ -449,8 +449,8 @@ html(lang='en')
                 
                 
                                         
-                    .col
-                        .card.shadow.rounded.h-100
+                    .col.col-lg-9.mx-auto
+                        .card.shadow.rounded
                             .card-body
                                 | #[strong Categorical groups in brave new algebra]<br>
                                 | #[i Workshop on Categorical Groups]<br>
@@ -464,8 +464,8 @@ html(lang='en')
                 
                 
                                         
-                    .col
-                        .card.shadow.rounded.h-100
+                    .col.col-lg-9.mx-auto
+                        .card.shadow.rounded
                             .card-body
                                 | #[strong When can we enhance a triangulated category?]<br>
                                 | #[i Conference on Homology and Homotopy]<br>
@@ -478,8 +478,8 @@ html(lang='en')
                 
                 
                                         
-                    .col
-                        .card.shadow.rounded.h-100
+                    .col.col-lg-9.mx-auto
+                        .card.shadow.rounded
                             .card-body
                                 | #[strong On Massey products and triangulated categories]<br>
                                 | #[i Workshop on Derived Categories]<br>
@@ -492,8 +492,8 @@ html(lang='en')
                 
                 
                                         
-                    .col
-                        .card.shadow.rounded.h-100
+                    .col.col-lg-9.mx-auto
+                        .card.shadow.rounded
                             .card-body
                                 | #[strong Picard groupoids, determinant functors and K-theory]<br>
                                 | #[i Categories in Geometry and in Mathematical Physics]<br>
@@ -507,8 +507,8 @@ html(lang='en')
                 
                 
                                         
-                    .col
-                        .card.shadow.rounded.h-100
+                    .col.col-lg-9.mx-auto
+                        .card.shadow.rounded
                             .card-body
                                 | #[strong Exotic triangulated categories]<br>
                                 | #[i Barcelona Topology Workshop 2007]<br>
@@ -521,13 +521,13 @@ html(lang='en')
                 
                 
                                         
-                    .col
-                        .card.shadow.rounded.h-100
+                    .col.col-lg-9.mx-auto
+                        .card.shadow.rounded
                             .card-body
                                 | #[strong The 1-type of Waldhausen K-theory]<br>
                                 | #[i Sixth Nordrhein-Westfalen Topology Meeting]<br>
                                 | 
-                                | 24-25 November 2006, D{\"u}sseldorf, Germany
+                                | 24-25 November 2006, Düsseldorf, Germany
                             .card-footer
                                 a.btn.btn-xs(href="assets/files/presentations/nrwdus.pdf") Presentation
                                 a.btn.btn-xs(href="http://reh.math.uni-duesseldorf.de/%7Einternet/NRWTopology/") Site
@@ -536,8 +536,8 @@ html(lang='en')
                 
                 
                                         
-                    .col
-                        .card.shadow.rounded.h-100
+                    .col.col-lg-9.mx-auto
+                        .card.shadow.rounded
                             .card-body
                                 | #[strong One the 1-type of Waldhausen K-theory]<br>
                                 | #[i VASBI ICM Satellite Conference on K-theory and Noncommutative Geometry]<br>
@@ -551,8 +551,8 @@ html(lang='en')
                 
                 
                                         
-                    .col
-                        .card.shadow.rounded.h-100
+                    .col.col-lg-9.mx-auto
+                        .card.shadow.rounded
                             .card-body
                                 | #[strong The 1-type of a Waldhausen K-theory spectrum]<br>
                                 | #[i International Congress of Mathematicians 2006]<br>
@@ -565,8 +565,8 @@ html(lang='en')
                 
                 
                                         
-                    .col
-                        .card.shadow.rounded.h-100
+                    .col.col-lg-9.mx-auto
+                        .card.shadow.rounded
                             .card-body
                                 | #[strong Triangulated categories with universal Toda brackets]<br>
                                 | #[i Workshop on Triangulated categories]<br>
