--- a/src/subfiles/presentations_max.j2
+++ b/src/subfiles/presentations_max.j2
@@ -3,7 +3,7 @@
 
 h3.col-lg-12.mt-3.mb-3.text-left 
     .bi.bi-easel &nbsp; Presentations
-.row.row-cols-1.row-cols-xl-2.gx-5.gy-4.mb-4
+.row.row-cols-1.gx-5.gy-4.mb-4
 {% set count = {'counter': 0} %}
 {% for entry in input %}
 {% if count.counter < maximum %}
