--- a/src/subfiles/presentations_max.pug
+++ b/src/subfiles/presentations_max.pug
@@ -3,14 +3,14 @@
 
 h3.col-lg-12.mt-3.mb-3.text-left 
     .bi.bi-easel &nbsp; Presentations
-.row.row-cols-1.row-cols-xl-2.gx-5.gy-4.mb-4
+.row.row-cols-1.gx-5.gy-4.mb-4
 
 
 
 
         
-    .col
-        .card.shadow.rounded.h-100
+    .col.col-lg-9.mx-auto
+        .card.shadow.rounded
             .card-body
                 | #[strong An application of homotopy theory to singularity theory]<br>
                 | #[i University of Haifa Topology & Geometry Seminar]<br>
@@ -25,8 +25,8 @@ h3.col-lg-12.mt-3.mb-3.text-left
 
 
         
-    .col
-        .card.shadow.rounded.h-100
+    .col.col-lg-9.mx-auto
+        .card.shadow.rounded
             .card-body
                 | #[strong Hypercommutative algebras and differential forms]<br>
                 | #[i Operadic Methods in Geometry]<br>
