--- a/src/subfiles/publications.j2
+++ b/src/subfiles/publications.j2
@@ -9,7 +9,7 @@
 {% if count.counter == 0 %}
 h3.col-lg-12.mt-3.mb-3.text-left 
     .bi.bi-journal &nbsp; Preprints
-.row.row-cols-1.row-cols-xl-2.gx-5.gy-4.mb-4
+.row.row-cols-1.gx-5.gy-4.mb-4
 {% endif -%}
     {% filter indent(width=4) %}
     {{ paper(entry.id, entry.author, entry.title, entry.issued['date-parts'][0][0], entry.type, entry['container-title'], entry.volume, entry.number, entry.series, entry.page, entry.note, entry.DOI, entry.arxiv, entry.abstract, entry.bibtex, entry['zbmath_url']) }}
@@ -25,7 +25,7 @@ h3.col-lg-12.mt-3.mb-3.text-left
 
 h3.col-lg-12.mt-3.mb-3.text-left 
     .bi.bi-journal-check &nbsp; Papers
-.row.row-cols-1.row-cols-xl-2.gx-5.gy-4.mb-4
+.row.row-cols-1.gx-5.gy-4.mb-4
 {% set count = {'counter': 0} %}
 {% for entry in input %}
 {% if entry.type != '' %}
