remove extra menu items and add data to about

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -60,12 +60,6 @@ html(lang='en')
                         li.nav-item
                             a.nav-link(href='#research') Research
                         li.nav-item
-                            a.nav-link(href='preprints.html') Preprints
-                        li.nav-item
-                            a.nav-link(href='papers.html') Papers
-                        li.nav-item
-                            a.nav-link(href='presentations.html') Presentations
-                        li.nav-item
                             a.nav-link(href='#docencia') Docencia
                         li.nav-item
                             a.nav-link(href='#portfolio') Gallery
@@ -219,7 +213,7 @@ html(lang='en')
                 h2.mb-4 About me
                 hr.divider
                 p.text-white-75.mb-5.mx-5.text-center
-                    | I completed my PhD at the #[i Universidad de Sevilla] in 2004. Then I spent two years at the #[i Max-PlanckInstitut für Mathematik] and two and a half years at the #[i Universitat de Barcelona] as a postdoc. I moved back to Seville in mid 2009 with an associate professorship. Here, I'm a member of the Mathematical Institute and of the Algebra Department.
+                    | I completed my PhD at the #[i Universidad de Sevilla] in 2004. Then I spent two years at the #[i Max-PlanckInstitut für Mathematik] and two and a half years at the #[i Universitat de Barcelona] as a postdoc. I moved back to Seville in mid 2009 with an associate professorship and became a full professor in 2023. Here, I'm a member of the Mathematical Institute and of the Algebra Department.
 
         // contact
         section#contact.page-section
