--- a/src/pug/papers.pug
+++ b/src/pug/papers.pug
@@ -53,13 +53,11 @@ html(lang='en')
                         li.nav-item
                             a.nav-link(href='index.html#research') Research
                         li.nav-item
-                            a.nav-link(href='preprints.html') Preprints
-                        li.nav-item
-                            a.nav-link(href='#page-top') Papers
-                        li.nav-item
-                            a.nav-link(href='presentations.html') Presentations
+                            a.nav-link(href='#docencia') Docencia
                         li.nav-item
                             a.nav-link(href='index.html#portfolio') Gallery
+                        li.nav-item
+                            a.nav-link(href='#about') About
                         li.nav-item
                             a.nav-link(href='index.html#contact') Contact
 
