--- a/src/pug/presentations.pug
+++ b/src/pug/presentations.pug
@@ -53,13 +53,11 @@ html(lang='en')
                         li.nav-item
                             a.nav-link(href='index.html#research') Research
                         li.nav-item
-                            a.nav-link(href='preprints.html') Preprints
-                        li.nav-item
-                            a.nav-link(href='papers.html') Papers
-                        li.nav-item
-                            a.nav-link(href='#page-top') Presentations
+                            a.nav-link(href='#docencia') Docencia
                         li.nav-item
                             a.nav-link(href='index.html#portfolio') Gallery
+                        li.nav-item
+                            a.nav-link(href='#about') About
                         li.nav-item
                             a.nav-link(href='index.html#contact') Contact
 
