PPP part title centered

--- a/src/subfiles/publications.j2
+++ b/src/subfiles/publications.j2
@@ -7,7 +7,7 @@
 {% if entry.type == '' and (entry.issued['date-parts'][0][0] | int) > 2020%}
 {% if count.counter < maximum %}
 {% if count.counter == 0 %}
-h3.col-lg-12.mt-3.mb-3.text-left 
+h3.mt-5.mb-3.text-center
     .bi.bi-journal &nbsp; Preprints
 .row.row-cols-1.gx-5.gy-4.mb-4
 {% endif -%}
@@ -23,7 +23,7 @@ h3.col-lg-12.mt-3.mb-3.text-left
 {% endfor %}
 
 
-h3.col-lg-12.mt-3.mb-3.text-left 
+h3.mt-5.mb-3.text-center 
     .bi.bi-journal-check &nbsp; Papers
 .row.row-cols-1.gx-5.gy-4.mb-4
 {% set count = {'counter': 0} %}
