--- a/src/subfiles/publications.pug
+++ b/src/subfiles/publications.pug
@@ -10,7 +10,7 @@
 
 
 
-h3.col-lg-12.mt-3.mb-3.text-left 
+h3.mt-5.mb-3.text-center
     .bi.bi-journal &nbsp; Preprints
 .row.row-cols-1.gx-5.gy-4.mb-4
 
@@ -143,7 +143,7 @@ h3.col-lg-12.mt-3.mb-3.text-left
 
 
 
-h3.col-lg-12.mt-3.mb-3.text-left 
+h3.mt-5.mb-3.text-center 
     .bi.bi-journal-check &nbsp; Papers
 .row.row-cols-1.gx-5.gy-4.mb-4
 
