--- a/src/subfiles/presentations_max.j2
+++ b/src/subfiles/presentations_max.j2
@@ -1,7 +1,7 @@
 {% from "src/pug/_macros.j2" import presentation %}
 {% set maximum = 2 %}
 
-h3.col-lg-12.mt-3.mb-3.text-left 
+h3.mt-5.mb-3.text-center
     .bi.bi-easel &nbsp; Presentations
 .row.row-cols-1.gx-5.gy-4.mb-4
 {% set count = {'counter': 0} %}
