--- a/src/pug/index.j2
+++ b/src/pug/index.j2
@@ -80,7 +80,7 @@ html(lang='en')
                             | Welcome to my website! I'm a professor of mathematics at the University of Seville. Here, you'll mostly find information about my research.
                         p.mb-5
                         {% for network in social %}
-                            a.ai.{{ network.icon }}.ai-2x.mx-2.professional-icons(href="{{ network.link }}", data-bs-toggle="tooltip",
+                            a.ai.{{ network.icon }}.ai-2x.mx-2.professional-icons(href="{{ network.link }}", 
                             data-bs-placement="top",
                             data-bs-title="{{ network.name }}",
                             aria-label="{{ network.name }}")
