--- a/src/pug/index.j2
+++ b/src/pug/index.j2
@@ -128,7 +128,7 @@ html(lang='en')
                 h2.mb-4 About me
                 hr.divider
                 p.text-white-75.mb-5.mx-5.text-center
-                    | I completed my PhD at the #[i Universidad de Sevilla] in 2004. Then I spent two years at the #[i Max-PlanckInstitut für Mathematik] and two and a half years at the #[i Universitat de Barcelona] as a postdoc. I moved back to Seville in mid 2009 with an associate professorship and became a full professor in 2023. Here, I'm a member of the Mathematical Institute and of the Algebra Department.
+                    | I got my PhD at the #[i Universidad de Sevilla] in 2004. Then I spent two years at the #[i Max-PlanckInstitut für Mathematik] and two and a half years at the #[i Universitat de Barcelona] as a postdoc. I moved back to Seville in 2009 with an associate professorship and became a full professor in 2023. Here, I'm a member of the Mathematical Institute and of the Algebra Department.
 
         // contact
         section#contact.page-section
