--- a/src/pug/index.j2
+++ b/src/pug/index.j2
@@ -17,7 +17,7 @@ html(lang='en')
         link(rel="preconnect", href="https://fonts.googleapis.com")
         link(rel="preconnect", href="https://fonts.gstatic.com", crossorigin)
         link(href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap", rel="stylesheet")
-        link(href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet")
+        link(href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&display=swap", rel="stylesheet")
 
         // Favicon
         link(rel="apple-touch-icon", sizes="180x180", href="assets/ico/apple-touch-icon.png")
