--- a/src/pug/_macros.j2
+++ b/src/pug/_macros.j2
@@ -23,7 +23,7 @@
                 .modal-dialog(role="document").modal-dialog-centered
                     .modal-content
                         .modal-header
-                            h5.modal-title(id="abstract{{ id }}") {{ title }}
+                            h5.modal-title {{ title }}
                         .modal-body
                             p {{ abstract }}
                         .modal-footer.justify-content-center
