--- a/src/pug/papers.j2
+++ b/src/pug/papers.j2
@@ -45,7 +45,7 @@ html(lang='en')
         // Navigation
         nav#secondaryNav.navbar.navbar-expand-lg.navbar-light.fixed-top.py-3
             .container.px-4.px-lg-5
-                a.navbar-brand(href='index.html#page-top') Fernando Muro's website
+                a.navbar-brand(href='index.html#page-top') Fernando Muro
                 button.navbar-toggler.navbar-toggler-right(type='button', data-bs-toggle='collapse', data-bs-target='#navbarResponsive', aria-controls='navbarResponsive', aria-expanded='false', aria-label='Toggle navigation')
                     span.navbar-toggler-icon
                 #navbarResponsive.collapse.navbar-collapse
@@ -53,11 +53,11 @@ html(lang='en')
                         li.nav-item
                             a.nav-link(href='index.html#research') Research
                         li.nav-item
-                            a.nav-link(href='#docencia') Docencia
+                            a.nav-link(href='index.html#docencia') Docencia
                         li.nav-item
                             a.nav-link(href='index.html#portfolio') Gallery
                         li.nav-item
-                            a.nav-link(href='#about') About
+                            a.nav-link(href='index.html#about') About
                         li.nav-item
                             a.nav-link(href='index.html#contact') Contact
 
