--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -1,5 +1,5 @@
 doctype html
-html(lang='en')
+html(lang='en', data-bs-theme="dark")
 
     head
 
@@ -17,7 +17,7 @@ html(lang='en')
         link(rel="preconnect", href="https://fonts.googleapis.com")
         link(rel="preconnect", href="https://fonts.gstatic.com", crossorigin)
         link(href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap", rel="stylesheet")
-        link(href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet")
+        link(href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&display=swap", rel="stylesheet")
 
         // Favicon
         link(rel="apple-touch-icon", sizes="180x180", href="assets/ico/apple-touch-icon.png")
@@ -52,13 +52,20 @@ html(lang='en')
         // Navigation
         nav#mainNav.navbar.navbar-expand-lg.navbar-light.fixed-top.py-3
             .container.px-4.px-lg-5
-                a.navbar-brand(href='#page-top') Fernando Muro's website
+                a.navbar-brand(href='#page-top') Fernando Muro
                 button.navbar-toggler.navbar-toggler-right(type='button', data-bs-toggle='collapse', data-bs-target='#navbarResponsive', aria-controls='navbarResponsive', aria-expanded='false', aria-label='Toggle navigation')
                     span.navbar-toggler-icon
                 #navbarResponsive.collapse.navbar-collapse
                     ul.navbar-nav.ms-auto.my-2.my-lg-0
-                        li.nav-item
-                            a.nav-link(href='#research') Research
+                        li.nav-item.dropdown
+                            a#navbarDropdownMenuLink.nav-link.dropdown-toggle(href='#research', data-toggle="dropdown", aria-haspopup="true", aria-expanded="false") Research
+                            ul.dropdown-menu(aria-labelledby="navbarDropdownMenuLink")
+                                li.nav-item 
+                                    a.nav-link(href="preprints.html") Preprints
+                                li.nav-item 
+                                    a.nav-link(href="papers.html") Papers
+                                li.nav-item 
+                                    a.nav-link(href="presentations.html") Presentations
                         li.nav-item
                             a.nav-link(href='#docencia') Docencia
                         li.nav-item
@@ -80,49 +87,40 @@ html(lang='en')
                             | Welcome to my website! I'm a professor of mathematics at the University of Seville. Here, you'll mostly find information about my research.
                         p.mb-5
                         
-                            a.ai.icon-zbmath.ai-2x.mx-2.professional-icons(href="https://zbmath.org/authors/?q=ai:muro.fernando", data-bs-toggle="tooltip",
-                            data-bs-placement="top",
-                            data-bs-title="zbMath",
+                            a.ai.icon-zbmath.ai-2x.mx-2.professional-icons(href="https://zbmath.org/authors/?q=ai:muro.fernando", 
+                            title="zbMath",
                             aria-label="zbMath")
                         
-                            a.ai.icon-ams.ai-2x.mx-2.professional-icons(href="https://mathscinet.ams.org/mathscinet/author?authorId=724223", data-bs-toggle="tooltip",
-                            data-bs-placement="top",
-                            data-bs-title="MathSciNet",
+                            a.ai.icon-ams.ai-2x.mx-2.professional-icons(href="https://mathscinet.ams.org/mathscinet/author?authorId=724223", 
+                            title="MathSciNet",
                             aria-label="MathSciNet")
                         
-                            a.ai.ai-arxiv.ai-2x.mx-2.professional-icons(href="https://arxiv.org/a/muro_f_1", data-bs-toggle="tooltip",
-                            data-bs-placement="top",
-                            data-bs-title="arXiv",
+                            a.ai.ai-arxiv.ai-2x.mx-2.professional-icons(href="https://arxiv.org/a/muro_f_1", 
+                            title="arXiv",
                             aria-label="arXiv")
                         
-                            a.ai.ai-google-scholar.ai-2x.mx-2.professional-icons(href="https://scholar.google.com/citations?user=Jh0JG3wAAAAJ", data-bs-toggle="tooltip",
-                            data-bs-placement="top",
-                            data-bs-title="Google Scholar",
+                            a.ai.ai-google-scholar.ai-2x.mx-2.professional-icons(href="https://scholar.google.com/citations?user=Jh0JG3wAAAAJ", 
+                            title="Google Scholar",
                             aria-label="Google Scholar")
                         
-                            a.ai.ai-mathoverflow.ai-2x.mx-2.professional-icons(href="https://mathoverflow.net/users/12166/fernando-muro", data-bs-toggle="tooltip",
-                            data-bs-placement="top",
-                            data-bs-title="MathOverflow",
+                            a.ai.ai-mathoverflow.ai-2x.mx-2.professional-icons(href="https://mathoverflow.net/users/12166/fernando-muro", 
+                            title="MathOverflow",
                             aria-label="MathOverflow")
                         
-                            a.ai.ai-orcid.ai-2x.mx-2.professional-icons(href="https://orcid.org/0000-0001-8457-9889", data-bs-toggle="tooltip",
-                            data-bs-placement="top",
-                            data-bs-title="ORCID",
+                            a.ai.ai-orcid.ai-2x.mx-2.professional-icons(href="https://orcid.org/0000-0001-8457-9889", 
+                            title="ORCID",
                             aria-label="ORCID")
                         
-                            a.ai.ai-clarivate.ai-2x.mx-2.professional-icons(href="http://www.webofscience.com/wos/author/record/I-5790-2015", data-bs-toggle="tooltip",
-                            data-bs-placement="top",
-                            data-bs-title="Web of Science",
+                            a.ai.ai-clarivate.ai-2x.mx-2.professional-icons(href="http://www.webofscience.com/wos/author/record/I-5790-2015", 
+                            title="Web of Science",
                             aria-label="Web of Science")
                         
-                            a.ai.ai-scopus.ai-2x.mx-2.professional-icons(href="https://www.scopus.com/authid/detail.uri?authorId=22135559400", data-bs-toggle="tooltip",
-                            data-bs-placement="top",
-                            data-bs-title="Scopus",
+                            a.ai.ai-scopus.ai-2x.mx-2.professional-icons(href="https://www.scopus.com/authid/detail.uri?authorId=22135559400", 
+                            title="Scopus",
                             aria-label="Scopus")
                         
-                            a.ai.ai-zotero.ai-2x.mx-2.professional-icons(href="https://www.zotero.org/fmuro", data-bs-toggle="tooltip",
-                            data-bs-placement="top",
-                            data-bs-title="Zotero",
+                            a.ai.ai-zotero.ai-2x.mx-2.professional-icons(href="https://www.zotero.org/fmuro", 
+                            title="Zotero",
                             aria-label="Zotero")
                         
                         a.btn.btn-primary.btn-xl(href='#research') Find Out More
@@ -213,7 +211,7 @@ html(lang='en')
                 h2.mb-4 About me
                 hr.divider
                 p.text-white-75.mb-5.mx-5.text-center
-                    | I completed my PhD at the #[i Universidad de Sevilla] in 2004. Then I spent two years at the #[i Max-PlanckInstitut für Mathematik] and two and a half years at the #[i Universitat de Barcelona] as a postdoc. I moved back to Seville in mid 2009 with an associate professorship and became a full professor in 2023. Here, I'm a member of the Mathematical Institute and of the Algebra Department.
+                    | I got my PhD at the #[i Universidad de Sevilla] in 2004. Then I spent two years at the #[i Max-PlanckInstitut für Mathematik] and two and a half years at the #[i Universitat de Barcelona] as a postdoc. I moved back to Seville in 2009 with an associate professorship and became a full professor in 2023. Here, I'm a member of the Mathematical Institute and of the Algebra Department.
 
         // contact
         section#contact.page-section
