--- a/src/pug/presentations.pug
+++ b/src/pug/presentations.pug
@@ -45,24 +45,31 @@ html(lang='en')
         // Navigation
         nav#secondaryNav.navbar.navbar-expand-lg.navbar-light.fixed-top.py-3
             .container.px-4.px-lg-5
-                a.navbar-brand(href='index.html#page-top') Fernando Muro's website
+                a.navbar-brand(href='index.html#page-top') Fernando Muro
                 button.navbar-toggler.navbar-toggler-right(type='button', data-bs-toggle='collapse', data-bs-target='#navbarResponsive', aria-controls='navbarResponsive', aria-expanded='false', aria-label='Toggle navigation')
                     span.navbar-toggler-icon
                 #navbarResponsive.collapse.navbar-collapse
                     ul.navbar-nav.ms-auto.my-2.my-lg-0
+                        li.nav-item.dropdown
+                            a#navbarDropdownMenuLink.nav-link.dropdown-toggle(href='index.html#research', data-toggle="dropdown", aria-haspopup="true", aria-expanded="false") Research
+                            ul.dropdown-menu(aria-labelledby="navbarDropdownMenuLink")
+                                li.nav-item 
+                                    a.nav-link(href="preprints.html") Preprints
+                                li.nav-item 
+                                    a.nav-link(href="papers.html") Papers
+                                li.nav-item 
+                                    a.nav-link(href="#page-top", style="color: #f4623a;") Presentations
                         li.nav-item
-                            a.nav-link(href='index.html#research') Research
-                        li.nav-item
-                            a.nav-link(href='#docencia') Docencia
+                            a.nav-link(href='index.html#docencia') Docencia
                         li.nav-item
                             a.nav-link(href='index.html#portfolio') Gallery
                         li.nav-item
-                            a.nav-link(href='#about') About
+                            a.nav-link(href='index.html#about') About
                         li.nav-item
                             a.nav-link(href='index.html#contact') Contact
 
         // Cards
-        section#presentations.page-section
+        section#presentationspage.page-section
             .container.px-4.px-lg-5
                 h2.text-center.mt-0 
                     .bi.bi-easel &nbsp; Presentations
