--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -1,5 +1,5 @@
 doctype html
-html(lang='en', data-bs-theme="dark")
+html(lang='en')
 
     head
 
@@ -59,7 +59,7 @@ html(lang='en', data-bs-theme="dark")
                     ul.navbar-nav.ms-auto.my-2.my-lg-0
                         li.nav-item.dropdown
                             a#navbarDropdownMenuLink.nav-link.dropdown-toggle(href='#research', data-toggle="dropdown", aria-haspopup="true", aria-expanded="false") Research
-                            ul.dropdown-menu(aria-labelledby="navbarDropdownMenuLink")
+                            ul.dropdown-menu.border-3(aria-labelledby="navbarDropdownMenuLink")
                                 li.nav-item 
                                     a.nav-link(href="preprints.html") Preprints
                                 li.nav-item 
