--- a/src/pug/preprints.pug
+++ b/src/pug/preprints.pug
@@ -52,7 +52,7 @@ html(lang='en')
                     ul.navbar-nav.ms-auto.my-2.my-lg-0
                         li.nav-item.dropdown
                             a#navbarDropdownMenuLink.nav-link.dropdown-toggle(href='index.html#research', data-toggle="dropdown", aria-haspopup="true", aria-expanded="false") Research
-                            ul.dropdown-menu(aria-labelledby="navbarDropdownMenuLink")
+                            ul.dropdown-menu.border-3(aria-labelledby="navbarDropdownMenuLink")
                                 li.nav-item 
                                     a.nav-link(href="#page-top", style="color: #f4623a;") Preprints
                                 li.nav-item 
