--- a/src/scss/components/_navbar.scss
+++ b/src/scss/components/_navbar.scss
@@ -41,7 +41,7 @@
     .navbar-nav li > ul.dropdown-menu {
         display: block;
         padding-left: 2rem;
-        color: fade-out($black, 0.3);
+        color: var(--bs-text-primary);
         border-color: transparent;
     }
 
@@ -175,7 +175,7 @@
     .navbar-nav li > ul.dropdown-menu {
         display: block;
         padding-left: 2rem;
-        color: fade-out($black, 0.3);
+        color: var(--bs-text-primary);
         border-color: transparent;
     }
 
