--- a/src/subfiles/publications.j2
+++ b/src/subfiles/publications.j2
@@ -12,7 +12,7 @@ h3.mt-5.mb-3.text-center
 .row.row-cols-1.gx-5.gy-4.mb-4
 {% endif -%}
     {% filter indent(width=4) %}
-    {{ paper(entry.id, entry.author, entry.title, entry.issued['date-parts'][0][0], entry.type, entry['container-title'], entry.volume, entry.number, entry.series, entry.page, entry.note, entry.DOI, entry.arxiv, entry.abstract, entry.bibtex, entry['zbmath_url']) }}
+    {{ paper(entry.id, entry.author, entry.title, entry.issued['date-parts'][0][0], entry.type, entry['container-title'], entry.volume, entry.issue, entry.series, entry.page, entry.note, entry.DOI, entry.arxiv, entry.abstract, entry.bibtex, entry['zbmath_url']) }}
     {% endfilter -%}
 {% elif count.counter == maximum -%}
 .text-center.mt-2
@@ -40,7 +40,7 @@ h3.mt-5.mb-3.text-center
 {% endif %}
 {% if count.counter < maximum %}
     {% filter indent(width=4) %}
-    {{ paper(entry.id, entry.author, entry.title, entry.issued['date-parts'][0][0], entry.type, entry['container-title'], entry.volume, entry.number, entry.series, entry.page, entry.note, entry.DOI, entry.arxiv, entry.abstract, entry.bibtex, entry['zbmath_url'], pdf) }}
+    {{ paper(entry.id, entry.author, entry.title, entry.issued['date-parts'][0][0], entry.type, entry['container-title'], entry.volume, entry.issue, entry.series, entry.page, entry.note, entry.DOI, entry.arxiv, entry.abstract, entry.bibtex, entry['zbmath_url'], pdf) }}
     {% endfilter -%}
 {% elif count.counter == maximum -%}
 .text-center.mt-2
