--- a/src/subfiles/publications.pug
+++ b/src/subfiles/publications.pug
@@ -160,7 +160,7 @@ h3.mt-5.mb-3.text-center
             .card-body
                 | Jeroen Maes and Fernando Muro<br>
                 | #[strong Derived homotopy algebras]<br>
-                | #[i Proc. R. Soc. Edinb., Sect. A, Math.]   153 (2023), 1198-1243
+                | #[i Proc. R. Soc. Edinb., Sect. A, Math.]   153 (2023) no. 4, 1198-1243
             .card-footer
                 
                 a.btn.btn-xs(href="https://doi.org/10.1017/prm.2022.42") publisher
@@ -203,7 +203,7 @@ h3.mt-5.mb-3.text-center
             .card-body
                 | Fernando Muro<br>
                 | #[strong Massey products for algebras over operads]<br>
-                | #[i Commun. Algebra]   51 (2023), 3298-3313
+                | #[i Commun. Algebra]   51 (2023) no. 8, 3298-3313
             .card-footer
                 
                 a.btn.btn-xs(href="https://doi.org/10.1080/00927872.2023.2181780") publisher
