--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -12087,7 +12087,17 @@ body {
 }
 
 .page-section {
-  padding: 8rem 0;
+  padding: 4rem 0;
+}
+@media (min-width: 768px) {
+  .page-section {
+    padding: 6rem 0;
+  }
+}
+@media (min-width: 992px) {
+  .page-section {
+    padding: 8rem 0;
+  }
 }
 
 .text-white-75 {
