--- a/src/pug/presentations.j2
+++ b/src/pug/presentations.j2
@@ -9,6 +9,9 @@ html(lang='en')
         meta(name='viewport', content='width=device-width, initial-scale=1, shrink-to-fit=no')
         meta(name="description", content="research, investigacion, science, ciencia, mathematics, matematicas, algebra, topology, topologia, homotopy, homotopia, homology, homologia, k-theory, teoria k, category theory, categorias, representation theory, teoría de representaciones, university of seville, universidad de sevilla")
         meta(name="author", content="Fernando Muro")
+        meta(name="format-detection", content="telephone=no")
+        meta(name="theme-color", content="#fff", media="(prefers-color-scheme: light)")
+        meta(name="theme-color", content="#212529;", media="(prefers-color-scheme: dark)")
 
         title Fernando Muro's presentations
 
