--- a/src/subfiles/publications.pug
+++ b/src/subfiles/publications.pug
@@ -217,7 +217,7 @@ h3.mt-5.mb-3.text-center
                             .modal-header
                                 h5.modal-title Massey products for algebras over operads
                             .modal-body
-                                p We define a generalization of Massey products for algebras over a Koszul operad in characteristic zero, extending Massey's and Allday's and Retah's in the associative and Lie cases, respectively. We establish connections with minimal models and with Dimitrova's universal operadic cohomology class. We compute a Gerstenhaber algebra example and a hypercommutative algebra example related to the Chevalley-Eilenberg complex of the Heisenberg Lie algebra.
+                                p We define a generalization of Massey products for algebras over a Koszul operad in characteristic zero, extending Massey&#39;s and Allday&#39;s and Retah&#39;s in the associative and Lie cases, respectively. We establish connections with minimal models and with Dimitrova&#39;s universal operadic cohomology class. We compute a Gerstenhaber algebra example and a hypercommutative algebra example related to the Chevalley-Eilenberg complex of the Heisenberg Lie algebra.
                             .modal-footer.justify-content-center
                                 button.btn.btn-primary.btn-xl(type="button", data-bs-dismiss="modal") Close
                 a.btn.btn-xs(type="button", data-bs-toggle="modal", data-bs-target="#bibtexzbMATH07700052") BibTeX
