--- a/src/pug/_macros.j2
+++ b/src/pug/_macros.j2
@@ -25,7 +25,7 @@
                         .modal-header
                             h5.modal-title {{ title }}
                         .modal-body
-                            p {{ abstract }}
+                            p {{ abstract | e }}
                         .modal-footer.justify-content-center
                             button.btn.btn-primary.btn-xl(type="button", data-bs-dismiss="modal") Close
             {% endif -%}
